// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderReactNative matches the snapshot for multi-version.json 1`] = `
"/**
 * Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
 * Requires peer @ht-sdks/events-sdk-react-native v2.22.0 or later.
 */

import type { EnrichmentClosure, HightouchClient, HightouchEvent, JsonMap } from '@ht-sdks/events-sdk-react-native';

export interface TrackOrderCompletedV1 {
    orderId?: string;
    [property: string]: unknown;
}

export interface TrackOrderCompletedV2 {
    orderId?: string;
    total?:   number;
    [property: string]: unknown;
}

let analytics: HightouchClient | undefined;

export function setHtEvents(instance: HightouchClient): void {
  analytics = instance;
}

function requireAnalytics(): HightouchClient {
  if (analytics === undefined) {
    throw new Error('Call setHtEvents(analytics) before emitting events.');
  }
  return analytics;
}

function setAtPath(
  root: Record<string, unknown>,
  path: readonly string[],
  value: string,
): Record<string, unknown> {
  if (path.length === 0) return root;
  const clone: Record<string, unknown> = { ...root };
  let cursor = clone;
  for (let i = 0; i < path.length - 1; i += 1) {
    const key = path[i];
    const next = cursor[key];
    const child =
      next !== null && typeof next === "object" && !Array.isArray(next)
        ? { ...(next as Record<string, unknown>) }
        : {};
    cursor[key] = child;
    cursor = child;
  }
  cursor[path[path.length - 1]] = value;
  return clone;
}

function deepMerge(base: JsonMap, extra: JsonMap): JsonMap {
  const out: JsonMap = { ...base };
  for (const [key, value] of Object.entries(extra)) {
    const existing = out[key];
    if (
      value !== null &&
      typeof value === "object" &&
      !Array.isArray(value) &&
      existing !== null &&
      typeof existing === "object" &&
      !Array.isArray(existing)
    ) {
      out[key] = deepMerge(existing as JsonMap, value as JsonMap);
    } else {
      out[key] = value;
    }
  }
  return out;
}

function mergeContext(event: HightouchEvent, extra: JsonMap): HightouchEvent {
  const base =
    event.context !== null &&
    typeof event.context === "object" &&
    !Array.isArray(event.context)
      ? (event.context as JsonMap)
      : {};
  event.context = deepMerge(base, extra) as HightouchEvent["context"];
  return event;
}

function contextEnrichment(
  context: JsonMap | undefined,
): EnrichmentClosure | undefined {
  if (context === undefined || Object.keys(context).length === 0) {
    return undefined;
  }
  return (event) => mergeContext(event, context);
}

function withSchemaVersion<T extends Record<string, unknown>>(
  data: T,
  context: JsonMap | undefined,
  path: readonly string[] | undefined,
  version: string,
  envelopeKey: "properties" | "traits",
): { data: T; context: JsonMap | undefined } {
  if (path === undefined || path.length === 0) {
    return { data, context };
  }
  const [head, ...rest] = path;
  if (head === envelopeKey) {
    return {
      data: setAtPath(data, rest, version) as T,
      context,
    };
  }
  if (head === "context") {
    const contextRoot =
      context !== null &&
      typeof context === "object" &&
      !Array.isArray(context)
        ? (context as Record<string, unknown>)
        : {};
    return {
      data,
      context: setAtPath(contextRoot, rest, version) as JsonMap,
    };
  }
  return { data, context };
}

export function trackOrderCompletedV1(
  properties: TrackOrderCompletedV1,
  context?: JsonMap,
): Promise<void> {
  const htevents = requireAnalytics();
  const injected = withSchemaVersion(
    properties as Record<string, unknown>,
    context,
    undefined,
    "v1",
    "properties",
  );
  return htevents.track(
    "Order Completed",
    injected.data as JsonMap,
    contextEnrichment(injected.context),
  );
}

export function trackOrderCompletedV2(
  properties: TrackOrderCompletedV2,
  context?: JsonMap,
): Promise<void> {
  const htevents = requireAnalytics();
  const injected = withSchemaVersion(
    properties as Record<string, unknown>,
    context,
    undefined,
    "v2",
    "properties",
  );
  return htevents.track(
    "Order Completed",
    injected.data as JsonMap,
    contextEnrichment(injected.context),
  );
}

export const trackOrderCompleted: typeof trackOrderCompletedV2 = trackOrderCompletedV2;
"
`;

exports[`renderReactNative matches the snapshot for simple-track.json 1`] = `
"/**
 * Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
 * Requires peer @ht-sdks/events-sdk-react-native v2.22.0 or later.
 */

import type { EnrichmentClosure, HightouchClient, HightouchEvent, JsonMap } from '@ht-sdks/events-sdk-react-native';

export interface TrackOrderCompletedDefault {
    orderId: string;
    total?:  number;
    [property: string]: unknown;
}

let analytics: HightouchClient | undefined;

export function setHtEvents(instance: HightouchClient): void {
  analytics = instance;
}

function requireAnalytics(): HightouchClient {
  if (analytics === undefined) {
    throw new Error('Call setHtEvents(analytics) before emitting events.');
  }
  return analytics;
}

function setAtPath(
  root: Record<string, unknown>,
  path: readonly string[],
  value: string,
): Record<string, unknown> {
  if (path.length === 0) return root;
  const clone: Record<string, unknown> = { ...root };
  let cursor = clone;
  for (let i = 0; i < path.length - 1; i += 1) {
    const key = path[i];
    const next = cursor[key];
    const child =
      next !== null && typeof next === "object" && !Array.isArray(next)
        ? { ...(next as Record<string, unknown>) }
        : {};
    cursor[key] = child;
    cursor = child;
  }
  cursor[path[path.length - 1]] = value;
  return clone;
}

function deepMerge(base: JsonMap, extra: JsonMap): JsonMap {
  const out: JsonMap = { ...base };
  for (const [key, value] of Object.entries(extra)) {
    const existing = out[key];
    if (
      value !== null &&
      typeof value === "object" &&
      !Array.isArray(value) &&
      existing !== null &&
      typeof existing === "object" &&
      !Array.isArray(existing)
    ) {
      out[key] = deepMerge(existing as JsonMap, value as JsonMap);
    } else {
      out[key] = value;
    }
  }
  return out;
}

function mergeContext(event: HightouchEvent, extra: JsonMap): HightouchEvent {
  const base =
    event.context !== null &&
    typeof event.context === "object" &&
    !Array.isArray(event.context)
      ? (event.context as JsonMap)
      : {};
  event.context = deepMerge(base, extra) as HightouchEvent["context"];
  return event;
}

function contextEnrichment(
  context: JsonMap | undefined,
): EnrichmentClosure | undefined {
  if (context === undefined || Object.keys(context).length === 0) {
    return undefined;
  }
  return (event) => mergeContext(event, context);
}

function withSchemaVersion<T extends Record<string, unknown>>(
  data: T,
  context: JsonMap | undefined,
  path: readonly string[] | undefined,
  version: string,
  envelopeKey: "properties" | "traits",
): { data: T; context: JsonMap | undefined } {
  if (path === undefined || path.length === 0) {
    return { data, context };
  }
  const [head, ...rest] = path;
  if (head === envelopeKey) {
    return {
      data: setAtPath(data, rest, version) as T,
      context,
    };
  }
  if (head === "context") {
    const contextRoot =
      context !== null &&
      typeof context === "object" &&
      !Array.isArray(context)
        ? (context as Record<string, unknown>)
        : {};
    return {
      data,
      context: setAtPath(contextRoot, rest, version) as JsonMap,
    };
  }
  return { data, context };
}

export function trackOrderCompletedDefault(
  properties: TrackOrderCompletedDefault,
  context?: JsonMap,
): Promise<void> {
  const htevents = requireAnalytics();
  const injected = withSchemaVersion(
    properties as Record<string, unknown>,
    context,
    ["context", "protocols", "schemaVersion"],
    "default",
    "properties",
  );
  return htevents.track(
    "Order Completed",
    injected.data as JsonMap,
    contextEnrichment(injected.context),
  );
}

export const trackOrderCompleted: typeof trackOrderCompletedDefault = trackOrderCompletedDefault;
"
`;

exports[`renderReactNative matches the snapshot for with-refs.json 1`] = `
"/**
 * Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
 * Requires peer @ht-sdks/events-sdk-react-native v2.22.0 or later.
 */

import type { EnrichmentClosure, HightouchClient, HightouchEvent, JsonMap, UserTraits } from '@ht-sdks/events-sdk-react-native';

export interface IdentifyDefault {
    email?: string;
    [property: string]: unknown;
}

export interface TrackCartViewedDefault {
    amount:     number;
    currency:   string;
    itemCount?: number;
    [property: string]: unknown;
}

let analytics: HightouchClient | undefined;

export function setHtEvents(instance: HightouchClient): void {
  analytics = instance;
}

function requireAnalytics(): HightouchClient {
  if (analytics === undefined) {
    throw new Error('Call setHtEvents(analytics) before emitting events.');
  }
  return analytics;
}

function setAtPath(
  root: Record<string, unknown>,
  path: readonly string[],
  value: string,
): Record<string, unknown> {
  if (path.length === 0) return root;
  const clone: Record<string, unknown> = { ...root };
  let cursor = clone;
  for (let i = 0; i < path.length - 1; i += 1) {
    const key = path[i];
    const next = cursor[key];
    const child =
      next !== null && typeof next === "object" && !Array.isArray(next)
        ? { ...(next as Record<string, unknown>) }
        : {};
    cursor[key] = child;
    cursor = child;
  }
  cursor[path[path.length - 1]] = value;
  return clone;
}

function deepMerge(base: JsonMap, extra: JsonMap): JsonMap {
  const out: JsonMap = { ...base };
  for (const [key, value] of Object.entries(extra)) {
    const existing = out[key];
    if (
      value !== null &&
      typeof value === "object" &&
      !Array.isArray(value) &&
      existing !== null &&
      typeof existing === "object" &&
      !Array.isArray(existing)
    ) {
      out[key] = deepMerge(existing as JsonMap, value as JsonMap);
    } else {
      out[key] = value;
    }
  }
  return out;
}

function mergeContext(event: HightouchEvent, extra: JsonMap): HightouchEvent {
  const base =
    event.context !== null &&
    typeof event.context === "object" &&
    !Array.isArray(event.context)
      ? (event.context as JsonMap)
      : {};
  event.context = deepMerge(base, extra) as HightouchEvent["context"];
  return event;
}

function contextEnrichment(
  context: JsonMap | undefined,
): EnrichmentClosure | undefined {
  if (context === undefined || Object.keys(context).length === 0) {
    return undefined;
  }
  return (event) => mergeContext(event, context);
}

function withSchemaVersion<T extends Record<string, unknown>>(
  data: T,
  context: JsonMap | undefined,
  path: readonly string[] | undefined,
  version: string,
  envelopeKey: "properties" | "traits",
): { data: T; context: JsonMap | undefined } {
  if (path === undefined || path.length === 0) {
    return { data, context };
  }
  const [head, ...rest] = path;
  if (head === envelopeKey) {
    return {
      data: setAtPath(data, rest, version) as T,
      context,
    };
  }
  if (head === "context") {
    const contextRoot =
      context !== null &&
      typeof context === "object" &&
      !Array.isArray(context)
        ? (context as Record<string, unknown>)
        : {};
    return {
      data,
      context: setAtPath(contextRoot, rest, version) as JsonMap,
    };
  }
  return { data, context };
}

export function identifyDefault(
  traits: IdentifyDefault,
  context?: JsonMap,
): Promise<void>;
export function identifyDefault(
  userId: string,
  traits: IdentifyDefault,
  context?: JsonMap,
): Promise<void>;
export function identifyDefault(
  userIdOrTraits: string | IdentifyDefault,
  traitsOrContext?: IdentifyDefault | JsonMap,
  maybeContext?: JsonMap,
): Promise<void> {
  const htevents = requireAnalytics();
  const userId =
    typeof userIdOrTraits === "string" ? userIdOrTraits : undefined;
  const traits = (
    typeof userIdOrTraits === "string" ? traitsOrContext : userIdOrTraits
  ) as IdentifyDefault;
  const context =
    typeof userIdOrTraits === "string"
      ? maybeContext
      : (traitsOrContext as JsonMap | undefined);
  const injected = withSchemaVersion(
    (traits ?? {}) as Record<string, unknown>,
    context,
    undefined,
    "default",
    "traits",
  );
  return htevents.identify(
    userId,
    injected.data as UserTraits,
    contextEnrichment(injected.context),
  );
}

export const identify: typeof identifyDefault = identifyDefault;

export function trackCartViewedDefault(
  properties: TrackCartViewedDefault,
  context?: JsonMap,
): Promise<void> {
  const htevents = requireAnalytics();
  const injected = withSchemaVersion(
    properties as Record<string, unknown>,
    context,
    undefined,
    "default",
    "properties",
  );
  return htevents.track(
    "Cart Viewed",
    injected.data as JsonMap,
    contextEnrichment(injected.context),
  );
}

export const trackCartViewed: typeof trackCartViewedDefault = trackCartViewedDefault;
"
`;
